--- a/Docs/Documento Final Tesis/includes/config.tex
+++ b/Docs/Documento Final Tesis/includes/config.tex
@@ -12,6 +12,11 @@
 \usepackage{float}
 \usepackage{array}
 \usepackage{multirow}
+\usepackage{listings}
+\usepackage{color}
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
 \usepackage[font=small,format=plain,labelfont=bf,it]{caption}
 \geometry{top=2.5cm, bottom=2.5cm, left=3.0cm, right=2.5cm}
 \renewcommand{\rmdefault}{cmr} % Roman
