--- a/Docs/Documento Final Tesis/tesis.tex
+++ b/Docs/Documento Final Tesis/tesis.tex
@@ -26,6 +26,7 @@
 	\pagenumbering{arabic}
 	\include{includes/capitulo01}
 	\include{includes/capitulo02}
+	\include{includes/capitulo03}
 
 	\include{includes/bibliografia}
 
